# open-rdma-driver

./: .gitignore  Cargo.toml
blue-rdma-device/: Cargo.toml
blue-rdma-device/src/: address.rs  csr.rs  device_inner.rs  dma.rs  emulator.rs  lib.rs  memory_region.rs  net.rs  queue_pair.rs  queues.rs  types.rs
blue-rdma-device/src/csr/: command_request.rs  command_response.rs  handler.rs  macros.rs  meta_report.rs  reset.rs  send.rs  types.rs
blue-rdma-device/src/device_api/: csr.rs
blue-rdma-device/src/emulator/: csr_proxy.rs  device.rs  dma_client.rs  net_agent.rs
blue-rdma-device/src/net/: agent.rs  message.rs  util.rs
blue-rdma-device/src/net/message/: acknowledge.rs  read_request.rs  read_response_first.rs  read_response_last.rs  read_response_middle.rs  read_response_only.rs  write_first.rs  write_last.rs  write_last_with_immediate.rs  write_middle.rs  write_only.rs  write_only_with_immediate.rs
blue-rdma-device/src/queues/: command_request.rs  command_response.rs  complete_queue.rs  descriptor.rs  errors.rs  meta_report.rs  send.rs  work_queue.rs
blue-rdma-device/src/queues/command_request/: common.rs  descriptors.rs  queue.rs
blue-rdma-device/src/queues/command_response/: queue.rs
blue-rdma-device/src/queues/meta_report/: descriptors.rs  queue.rs
blue-rdma-device/src/queues/send/: descriptors.rs  operations.rs  queue.rs
blue-rdma-device/src/queues/send/descriptors/: seg0.rs  (+3 more)
blue-rdma-device/src/simulator/: config.rs  csr_proxy.rs  device.rs  dma_client.rs  rpc.rs  udp_agent.rs
blue-rdma-device/src/simulator/rpc/: client.rs  mock_client.rs
(+190 files in other folders)
